  o Purification options were added into 'Nonlinear IRT Z' and 'DDF' subsections
    of 'DIF/Fairness' sections.
  o Purification options was added 'DDF' analysis in 'Reports' section when customized
    setting is selected.


MINOR UPDATES

  o Size of plots and font in plots was changed for reports.
  o Plots in HTML report are now centered.
  o Wording of reports' default option was updated.

---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.2 (2017-07-26) -
---------------------------------------------------

MAJOR UPDATES

  o Design of reports was edited.
  o Several bugs were fixed:
     - Bug when creating report for uploaded data was fixed.
     - Bug when creating report for data without predictive
       criterion or DIF group was fixed.
  o ShinyItemAnalysis now uses 'plotly' package!

MINOR UPDATES

  o Design and options of 'Report' page were updated.
  o Layout of IRT curves training page was mildly changed. There are now
    two curves in each plot. Also text area input was added and synchro-
    nized with sliders. Colour of sliders now correspond to colour of
    curve.


---------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.1 (2017-07-16) -
---------------------------------------------------

MAJOR UPDATES

  o Several bugs were fixed:
     - Interpretation of regression models was fixed.
     - Interpretation of text about correlation in Predictive validity
       was fixed.
  o ShinyItemAnalysis now used also 'data.table' package.
  o Data page was divided into two subpages to avoid long rendering
    of tables.
    when changing datasets.
  o Function 'gDiscrim' to calculate generalized discrimination was
    implemented.
  o Function 'DDplot' was edited to be able to handle generalized
    discrimination.
    Double slider was added into 'Traditional analysis page'.
  o Traditional analysis table was extended by adding column
    with generalized